# SILEX-light

./: .gitignore  .readthedocs.yaml  AUTHORS  CITATION.cff  Dockerfile  MANIFEST.in  README.md  build-wheels-manylinux.sh  deploy.sh  dev.md  environment.yml  install_MUMPS.sh  meson.build  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI-Ubuntu-PyPi.yml  CI-build-container.yml  CI-build-release.yml  CI-coverage.yml  CI-docs-rtd.yml  CI-macos-PyPi.yml  CI-macos-PyPi.yml.back  CI-macos.yml  CI-multi.yml  CI-ubuntu-PyPi.yml.back  CI-ubuntu.yml  CI-wiki-publish.yml  CI-windows-PyPi.yml  CI-windows-PyPi.yml.back  CI-windows.yml  CI-windows.yml.back  Ci-multi.yml
SILEXlight/: __init__.py  silex_lib_gmsh.py  silex_lib_tet4_fortran.f  silex_lib_tet4_python.py  silex_lib_tri3_fortran.f  silex_lib_tri3_python.py  version.py
SILEXlight/tests/: __init__.py  test_docstrings_and_comments.py  test_silex_lib_gmsh.py  test_silex_lib_tet4_fortran.py  test_silex_lib_tet4_python.py  test_silex_lib_tri3_fortran.py  test_silex_lib_tri3_python.py
calculs/: fork_readme.md  fork_readme_fr.md  index_calculs.ipynb  piston_readme.md  piston_readme_fr.md
calculs/landing_gear_fork/: fork.step
calculs/piston/: Main-piston-tet4.ipynb  Main-piston-tet4.py  piston-tet4-bis.geo  piston-tet4.geo  piston-tet4.msh  piston.step  plot_convergence.ipynb  plot_convergence.py
calculs/plate_hole/: Main-plate-hole-tri3.ipynb  Main-plate-hole-tri3.py  plate-hole-tri3.geo
docs/: prepare_github_wiki.py  requirements.txt
docs/source/: conf.py  examples_full.rst  getting_started.rst  index.rst  usage.rst
docs/source/api/: modules.rst  silex_lib_gmsh.rst  silex_lib_tet4_python.rst  silex_lib_tri3_python.rst
librairies/: silex_lib_tet4_fortran.f  silex_lib_tet4_python.py
misc/: silex.stl
src/SILEXlight/: __version__.py  silex_lib_gmsh.py  silex_lib_tri3_fortran.f  silex_lib_tri3_python.py
src/tests/: test_silex_lib_tri3_python.py
